# shell

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: cargo-fmt.yml  cargo-test.yml  check.yml  deny.yml  fmt.yml  whitespace.yml  whitespaces.yml
config/niri/: config.kdl
config/quickshell/: justfile  shell.qml
config/quickshell/config/: Anims.qml  Config.qml  NiriConfig.qml
config/quickshell/enums/: Accent.qml  NiriEasing.qml  SessionDesktop.qml
config/quickshell/models/: DropDownMenuEntry.qml  EntryContent.qml
config/quickshell/scripts/: build-shaders.sh  lock-screen.sh  qs-safe-wrapper.sh  sleep-on-bat.sh  swayidle.sh  wrap-term.sh
config/quickshell/services/: Brightness.qml  Caffeine.qml  Ipc.qml  MprisService.qml  Pipewire.qml  Session.qml  Time.qml
config/quickshell/shaders/: parallax.frag  parallax.vert
config/quickshell/theme/: Theme.qml
config/quickshell/utils/: Icons.qml  Paths.qml  Utils.qml
config/quickshell/widgets/: BatteryCircleIndicator.qml  BatteryIcon.qml  BatteryMenu.qml  BrightnessSlider.qml  ButtonGroup.qml  Checkbox.qml  CheckboxMenuItem.qml  CircularProgressIndicator.qml  DebugProc.qml  DropDownMenu.qml  DropDownMenuOld.qml  FadeLoader.qml  (+34 more)
private_dot_config/fastfetch/: config.jsonc
private_dot_config/niri/: autogen.kdl  config.kdl
private_dot_config/quickshell/: '  justfile  shell.qml
rust-helpers/notif-helper/: Cargo.toml
rust-helpers/notif-helper/src/: main.rs
scripts/: fmt.sh  install.sh  static-tests.sh  whitespace.sh  whitespaces
scripts/checks/: check-lock.sh  find-unused.sh
(+279 files in other folders)
