[package]
name = "notif-helper"
version = "0.1.0"
edition = "2024"
authors = [ "tpaau <tpaau17db@tutamail.com" ]
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.60", features = [ "derive" ] }
log = "0.4.29"
logger = { path = "../lib/logger" }
cmd = { path = "../lib/cmd" }
notify-rust = { version = "4.12.0", features = [ "dbus" ] }
